--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,3 +14,13 @@
 /* Components */
 @import 'cmps/AppHeader.css';
 @import 'cmps/UserMsg.css';
+@import 'cmps/AnimalList.css';
+@import 'cmps/SeasonClock.css';
+@import 'cmps/CountDown.css';
+@import 'cmps/MouseMonitor.css';
+
+
+
+
+
+
